--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </h2>
             <img
               class="testimonial-image"
-              src="images/lady-img.jpg"
+              src="images/lady.jpg"
               alt="lady-profile"
             />
             <em>Beverly, Illinois</em>
